cluster/prod/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
  labels: { app: nginx }
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector: { app: nginx }
  ports:
    - name: http
      port: 80
      targetPort: http
